# UiO

./: .gitignore  README.md
INF1000/: README.md
INF1000/oblig1/: Beslutninger.java  Billettpris.java  HeiStudent.java  LikeVerdier.java  MinOppgave1.java  Produkt.java
INF1000/oblig2/: EnkelKalkulator.java  Metoder.java  MinOppgave2.java  test.java
INF1000/oblig3/: FirstArray.java  FirstArrayOlga.java  MinOppgave3.java  MinOppgave4.java  NegativeTall.java  Olga.java  SumTall.java  arrays.java
INF1000/oblig4/: Innlesing.java  Kalkulator.java  MaxNumber.java  Temperatur.java  Valg.java  numbers.txt
INF1000/oblig5/: Bil.java  Isbod.java  MinOppgave5.java  Names.java  Oppgave51.java  Oppgave54.java
INF1000/oblig6/: Deloppgave61.java  Oblig6.java  Ord.java  Ordliste.java
INF1000/oblig7/: DVD.java  DVDAdministrasjon.java  Oblig7.java  Person.java
INF1010/: README.md
INF1010/assignment-1/: Animals.java  Bol.java  Katt.java  Mus.java  Oblig1.java  Rotte.java
INF1010/assignment-2/: Bok.java  GenHylle.java  Hylle.java  MainProgram.java  Oblig2.java  Test.java  TilUtlaan.java
INF1010/assignment-3/: Bil.java  Elbil.java  Fossilbil.java  Lastebil.java  Oblig3Main.java  Personbil.java  Test.java
INF1010/assignment-4/: AbstraktSortertEnkelListe.java  (+32 more)
INF1060/: README.md
INF1060/Hjemmeeksamen/: CMakeLists.txt  Makefile  README.md  client.c  common.h  job.h  protokoll.txt  server.c
INF1300/: README.md
INF2100/: README.md
INF2220/: README.md
INF2270/: README.md
INF2440/: README.md
INF2810/: README.md
INF3110/: README.md
INF3331/: README.md
(+169 files in other folders)
